# application/controller/user.go
@@ -5,17 +5,17 @@ import (
 	"github.com/kataras/iris/v12"
 	"github.com/kataras/iris/v12/sessions"
 	"github.com/sluggard/myfile/model"
-	"github.com/sluggard/myfile/service"
 )
 
 type UserController struct {
-	userService  service.UserService
-	tokenService service.TokenService
+	// userService  service.UserService
+	// tokenService service.TokenService
 }
 
-func NewUserController() *UserController {
-	return &UserController{userService: service.NewUserService(), tokenService: service.NewTokenService()}
-}
+// func NewUserController() *UserController {
+//	return &UserController{userService: service.NewUserService(), tokenService: service.NewTokenService()}
+// 	return &UserController{}
+// }
 
 type LoginForm struct {
 	Username string `json:"username" validate:"required"`
@@ -33,20 +33,32 @@ type LoginInfo struct {
 	Token string      `json:"token"`
 }
 
+// PostLogin godoc
+// @Summary 用户登录
+// @Description 用户登录
+// @Tags User
+// @Accept  application/json
+// @Produce  application/json
+// @Param loginForm body LoginForm true "用户名密码"
+// @Success 200 {object} LoginInfo "用户信息"
+// @Failure 400 {object} HttpResult "参数错误"
+// @Failure 401 {object} HttpResult "用户名或密码错误"
+// @Failure500 {object} HttpResult "服务器错误"
+// @Router /user/login [post]
 func (c *UserController) PostLogin(ctx iris.Context) *HttpResult {
 	loginForm := &LoginForm{}
 	if err := ctx.ReadJSON(loginForm); err != nil {
 		ctx.StatusCode(iris.StatusBadRequest)
 		return FailedCode(PARAM_ERROR)
 	}
-	if user, err := c.userService.Login(loginForm.Username, loginForm.Password); user == nil {
+	if user, err := userService.Login(loginForm.Username, loginForm.Password); user == nil {
 		return FailedCodeMessage(LOGIN_FAILED, err.Error())
 	} else {
 		// session := sessions.Get(ctx)
 		// session.Set("authenticated", true)
 		// session.Set("user", user)
 		// return Success(&LoginInfo{User: user, Token: session.ID()})
-		token, _ := c.tokenService.NewToken(user)
+		token, _ := tokenService.NewToken(user)
 		return Success(&LoginInfo{User: user, Token: token})
 	}
 }
@@ -63,7 +75,7 @@ func (c *UserController) GetInfo(ctx iris.Context) *HttpResult {
 }
 
 func (c *UserController) GetBy(id uint) *HttpResult {
-	if user, err := c.userService.GetById(id); err != nil {
+	if user, err := userService.GetById(id); err != nil {
 		return Failed()
 	} else {
 		user.Password = ""
@@ -71,6 +83,15 @@ func (c *UserController) GetBy(id uint) *HttpResult {
 	}
 }
 
+// Register
+// @Summary      用户注册
+// @Description  用户注册
+// @Tags         User
+// @Accept       application/json
+// @Produce      application/json
+// @Param        user  body      model.User  true  "用户信息"
+// @Success      200  {object}  model.User@
+// @Router       /user/register [post]
 func (c *UserController) PostRegister(ctx iris.Context) *HttpResult {
 	user := &model.User{}
 	if err := ctx.ReadJSON(user); err != nil {
@@ -87,7 +108,7 @@ func (c *UserController) PostRegister(ctx iris.Context) *HttpResult {
 		// from here you can create your own error messages in whatever language you wish
 		return FailedCodeMessage(PARAM_ERROR, err.Error())
 	}
-	if err := c.userService.Register(user); err != nil {
+	if err := userService.Register(user); err != nil {
 		return FailedCodeMessage(LOGIN_FAILED, err.Error())
 	}
 	return Success(user)
@@ -104,6 +125,15 @@ func (c *UserController) GetLike(ctx iris.Context) *HttpResult {
 	return Success(result)
 }
 
+// ResetPass
+// @Summary 重置密码
+// @Description 重置密码
+// @Tags User
+// @Accept  application/json
+// @Produce  application/json
+// @Param   body body    ResetPassForm  true  "用户信息"
+// @Success 200 {object}
+// @Failure
 func (c *UserController) PostResetpass(ctx iris.Context) *HttpResult {
 	user := CurrentUser(ctx)
 	// user := sessions.Get(ctx).Get("user").(*model.User)
@@ -112,7 +142,7 @@ func (c *UserController) PostResetpass(ctx iris.Context) *HttpResult {
 		ctx.StatusCode(iris.StatusBadRequest)
 		return FailedCode(PARAM_ERROR)
 	}
-	res, err := c.userService.ResetPassword(user.ID, resetPassForm.Oldpass, resetPassForm.Newpass)
+	res, err := userService.ResetPassword(user.ID, resetPassForm.Oldpass, resetPassForm.Newpass)
 	if res {
 		return Success("success")
 	} else {
